--- a/index.ipynb
+++ b/index.ipynb
@@ -265,9 +265,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
